@@ -36,6 +36,8 @@
 	client and server libraries have distinct SONAME_VERSION_INFO now
 	filters can be run before or after translations now
 	triggers default to "after" if not specified now
+	fixed bug that could cause begin/commit/rollback to try to send
+		nonexistent column info sometimes when faketransactionblocks=yes
 
 1.0.1 - updated sqlr-bench to create "db"-bench.png
 	added edoc-generated API docs for the Erlang API
